--- a/configure.ac
+++ b/configure.ac
@@ -24,6 +24,7 @@ AC_LANG([C])
 # ===========================
 AC_PROG_CPP
 AC_PROG_CC
+AC_PROG_CC_STDC
 AC_PROG_INSTALL
 AC_PROG_LN_S
 AC_PROG_MAKE_SET
