--- a/Makefile.am
+++ b/Makefile.am
@@ -4,7 +4,25 @@ EXTRA_DIST = \
 	contrib/ \
 	README.md \
 	CHANGELOG \
-	$(bin_SCRIPTS)
+	$(bin_SCRIPTS) \
+	$(man_MANS)
+
+man_MANS = \
+	man/itox.8 \
+	man/m_env.3 \
+	man/misc.3 \
+	man/pset.3 \
+	man/psi.3 \
+	man/sio.3 \
+	man/Sprint.3 \
+	man/strparse.3 \
+	man/strprint.3 \
+	man/strutil.3 \
+	man/xconv.pl.8 \
+	man/xinetd.conf.5 \
+	man/xinetd.log.5 \
+	man/xinetd.8 \
+	man/xlog.3
 
 AM_LDFLAGS = $(LDFLAGS) $(HARDEN_LDFLAGS)
 AM_CFLAGS = $(CFLAGS) $(HARDEN_CFLAGS)
