Travis split script to separate commands

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ compiler:
 install: make get-deps
 
 script:
-        sh autogen.sh
-        ./configure
-        make
-        make distcheck
+  - sh autogen.sh
+  - ./configure
+  - make
+  - make distcheck
