Adjust the install phase to work correctly in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,8 @@ compiler:
   - clang
   - gcc
 
-install:
-  - libtirpc-dev
-  - libwrap0-dev
-  - libselinux-dev
+before_install:
+  - sudo apt-get install -y libtirpc-dev libwrap0-dev libselinux-dev
 
 script:
   - sh autogen.sh
