Add poll function usage from RH
Compilation of:
xinetd-2.3.14-poll.patch
xinetd-2.3.14-tcpmux.patch
xinetd-2.3.14-clean-pfd.patch
xinetd-2.3.14-leaking-fds.patch
xinetd-2.3.14-many-services.patch
xinetd-2.3.14-realloc-remove.patch
xinetd-2.3.14-leaking-fds-2a.patch

--- a/Makefile.am
+++ b/Makefile.am
@@ -199,6 +199,7 @@ xinetd_SOURCES = \
 	src/xconfig.h \
 	src/xmdns.c \
 	src/xmdns.h \
+	src/xpoll.h \
 	src/xtimer.c \
 	src/xtimer.h
 xinetd_LDADD = \
