--- a/contrib/xinetd.service
+++ b/contrib/xinetd.service
@@ -1,6 +1,9 @@
 [Unit]
 Description=Xinetd A Powerful Replacement For Inetd
 After=network.target
+Documentation=man:xinetd
+Documentation=man:xinetd.conf
+Documentation=man:xinetd.log
 
 [Service]
 Type=simple
