Run one travis pass with all features disabled

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,3 +24,5 @@ script:
   - ./configure
   - make
   - make distcheck
+  - ./configure --without-libwrap --without-labeled-networking --without-loadavg
+  - make
