--- a/.travis.yml
+++ b/.travis.yml
@@ -35,4 +35,4 @@ addons:
     notification_email: scarabeus@opensuse.org
     build_command_prepend: "./autogen.sh; ./configure; make clean"
     build_command:   "make -j4"
-    branch_pattern: master
+    branch_pattern: coverity_test
